<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/tex_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/boton"
        android:padding="20sp"
        android:text="@string/tecno_app"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/boton"
        android:padding="20sp"
        android:text="@string/todos_a_la_u"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/texform"
            android:textSize="28sp"
            android:textColor="#003CEF"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/formulario" />

        <EditText
            android:id="@+id/nom"
            style="@style/editext"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/dir"
            style="@style/editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:autofillHints="direccion"
            android:hint="@string/direccion" />

        <EditText
            android:id="@+id/Phone"
            style="@style/editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telefono"
            android:autofillHints="telefono"
            android:inputType="phone" />

        <EditText
            android:id="@+id/Email"
            style="@style/editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:autofillHints="email"
            android:inputType="textEmailAddress" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Bt1"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:text="@string/casa" />

            <RadioButton
                android:id="@+id/Bt2"
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:text="@string/apartamento" />

            <RadioButton
                android:id="@+id/Bt3"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="@string/granja" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check1"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/panel" />

            <CheckBox
                android:id="@+id/check2"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/generador" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/check3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otros" />

        <Button
            android:id="@+id/BtEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/boton"
            android:text="@string/enviar"
            android:textSize="30sp"
            app:cornerRadius="10sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


